<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 noriokun4649.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/MapTool">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_map"
                    android:title="@string/Map"/>
                <item
                    android:id="@+id/nav_circlelist"
                    android:title="@string/CircleList" />
                <item
                    android:id="@+id/nav_circleinfo"
                    android:title="@string/CircleInfo" />
                <item
                    android:id="@+id/nav_circlelistedit"
                    android:title="@string/CircleListEdit" />
                <item
                    android:id="@+id/nav_circlelistimport"
                    android:title="@string/CircleListImport" />
            </group>
        </menu>
    </item>
    <item android:title="@string/Other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/Setting" />
            <item
                android:id="@+id/nav_oss"
                android:title="@string/Oss" />
        </menu>
    </item>

</menu>
