<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 noriokun4649.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false">

            <ImageView
                android:id="@+id/image_color"
                android:layout_width="15dp"
                android:layout_height="0dp"
                android:clickable="false"
                android:contentDescription="@string/color"
                android:focusable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="63dp"
                android:layout_height="63dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:contentDescription="@string/icon"
                android:focusable="false"
                android:padding="8dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512" />

            <TextView
                android:id="@+id/text_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/image_icon"
                app:layout_constraintStart_toStartOf="@+id/image_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:clickable="false"
                android:focusable="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_memo"
                app:layout_constraintStart_toStartOf="@+id/text_memo"
                app:layout_constraintTop_toBottomOf="@+id/text_memo">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/color_edit"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="true" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/memo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/memo_edit"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <TextView
                android:id="@+id/text_memo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="top"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toBottomOf="@+id/text_twitter"
                app:layout_constraintVertical_bias="0.16" />

            <TextView
                android:id="@+id/text_space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/image_icon"
                app:layout_constraintStart_toStartOf="@+id/image_icon" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>